--- a/Specs/Appccelerate.MappingEventBroker.Specs.html
+++ b/Specs/Appccelerate.MappingEventBroker.Specs.html
@@ -155,7 +155,7 @@ div.supplement {
 <h3 class="count">
   2 contexts, 5 specifications
 </h3><h3 class="context">
-  when publishing topic which matches default convention with defined mapping but without destination information
+  When publishing topic which matches default convention with defined mapping but without destination information
 </h3>
 <h4 class="count">
   2 specifications
@@ -183,7 +183,7 @@ div.supplement {
 
           </li>
         </ul><h3 class="context">
-  when publishing topic which matches default convention with defined mapping with destination information
+  When publishing topic which matches default convention with defined mapping with destination information
 </h3>
 <h4 class="count">
   3 specifications
@@ -226,7 +226,7 @@ div.supplement {
 <h3 class="count">
   2 contexts, 5 specifications
 </h3><h3 class="context">
-  when publishing topic which matches user defined convention with defined mapping
+  When publishing topic which matches user defined convention with defined mapping
 </h3>
 <h4 class="count">
   3 specifications
@@ -264,7 +264,7 @@ div.supplement {
 
           </li>
         </ul><h3 class="context">
-  when publishing topic which matches user defined convention with defined mapping but without subscriber
+  When publishing topic which matches user defined convention with defined mapping but without subscriber
 </h3>
 <h4 class="count">
   2 specifications
